<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="4"
    android:id="@+id/main_table">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="3dp"
            android:text="@string/str_Time"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="3dp"
            android:text="@string/str_Money"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="3dp"
            android:text="@string/str_Wallet"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="3dp"
            android:text="@string/str_Note"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="3dp"
            android:text="残高"
            android:textColor="@color/black" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="5dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:foreground="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:foreground="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:foreground="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:foreground="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:foreground="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:foreground="@color/black" />
    </TableRow>

</TableLayout>