<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="showallreturnbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />
-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="69dp">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TableLayout
                    android:id="@+id/tableALL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="5">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:padding="3dp"
                            android:text="@string/str_Time"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:padding="3dp"
                            android:text="@string/str_Income"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:padding="3dp"
                            android:text="@string/str_Outgo"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:padding="3dp"
                            android:text="@string/str_Balance"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:padding="3dp"
                            android:text="@string/str_Wallet"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="178dp"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:padding="3dp"
                            android:text="@string/str_Note"
                            android:textColor="@color/black" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="5dp">

                        <View
                            android:id="@+id/view"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:foreground="@color/black" />

                        <View
                            android:id="@+id/view2"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:foreground="@color/black" />

                        <View
                            android:id="@+id/view3"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:foreground="@color/black" />

                        <View
                            android:id="@+id/view4"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:foreground="@color/black" />

                        <View
                            android:id="@+id/view5"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:foreground="@color/black" />

                        <View
                            android:id="@+id/view6"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:foreground="@color/black" />
                    </TableRow>

                </TableLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>